--- a/index.html
+++ b/index.html
@@ -3,4 +3,10 @@
     <h3>
         <h7>hellow world </h7>
         <a herf="https://www.w3schools.com/">linkabc</a>
+        <style>
+            html {
+                background-color: red;
+            }
+        </style>
+    
     
