--- a/index.html
+++ b/index.html
@@ -3,4 +3,6 @@
     <h3>
         <h7>hellow world </h7>
         <a herf="https://www.w3schools.com/">linkabc</a>
-    
+        <a href="https://www.w3schools.com">
+            <img border="0" alt="W3Schools" src="logo_w3s.gif" width="100" height="100">
+            </a>
