--- a/index.html
+++ b/index.html
@@ -1,15 +1,8 @@
 <!DOCTYPE html>
-<body>
+<a href="almi.html">Home page </a>
+
     <h3>
         <h7>hellow world </h7>
         <a herf="https://www.w3schools.com/">linkabc</a>
-        <a href="https://www.w3schools.com">
-            <img border="0" alt="W3Schools" src="logo_w3s.gif" width="100" height="100">
-            </a>
-        <style>
-            html {
-                background-color: blue;
-            }
-        </style>
-    </body>
-</html>
+        <a href="https://www.w3schools.com">            <img border="0" alt="W3Schools" src="logo_w3s.gif" width="100" height="100">            </a<a href="almi.html">Home</a>  
+          </h3>
