--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 
     <h3>
         <h7>hellow world </h7>
-        <a href="almi.html">Home page </a>
+        <a href="almi.html">Home page </a><br>
+        <a href="newm.html">contact</a><br>
+
         <a herf="https://www.w3schools.com/">linkabc</a>
 
