--- a/index.html
+++ b/index.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
-
-
-    <h3>
-        <h7>hellow world </h7>
         <a href="almi.html">Home page </a><br>
 
         <a href="newm.html">contact</a><br>
 
         <a herf="https://www.w3schools.com/">linkabc test222</a>
 
+<a href="./inline.html">inline</a>
+<a href="./External.html">External</a>
+<a href="./internal.html">internal</a>
