--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 
         <a href="newm.html">contact</a><br>
 
-        <a herf="https://www.w3schools.com/">linkabc test222</a>
+        <a herf="https://www.w3schools.com/">linkabc test222</a></br>
 
-<a href="./inline.html">inline</a>
-<a href="./External.html">External</a>
-<a href="./internal.html">internal</a>
+        <a href="./inline.html">inline</a>
+        <a href="./External.html">External</a>
+        <a href="./internal.html">internal</a>
+</html>
