--- a/index.html
+++ b/index.html
@@ -8,4 +8,5 @@
         <a href="./inline.html">inline</a>
         <a href="./External.html">External</a>
         <a href="./internal.html">internal</a>
+        <a href="./heading.html">Heading 2</h2>
 </html>
