--- a/heading.html
+++ b/heading.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
-<body>
+<title>heading</title>
+<head>
     <h2 class="red-text">heading </h2>
+</head>
+   <body>check</body>
 </body>
 </html>
