--- a/heading.html
+++ b/heading.html
@@ -2,6 +2,7 @@
 <title>heading</title>
 <head>
     <h2 class="red-text">heading </h2>
+    <link rel="stylesheet" href="style.css">
 </head>
    <body>check</body>
 </body>
