--- a/heading.html
+++ b/heading.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <title>heading</title>
 <head>
+    
+    <link rel="stylesheet" href="./style.css">
     <h2 class="red-text">heading </h2>
-    <link rel="stylesheet" href="style.css">
 </head>
    <body>check</body>
 </body>
