--- a/heading.html
+++ b/heading.html
@@ -3,8 +3,10 @@
 <head>
     
     <link rel="stylesheet" href="./style.css">
-    <h2 class="red-text">heading </h2>
+    
 </head>
-   <body>check</body>
+   <body> <h1 class="red-text">documnet test</h1>
+    <h2 class="red-text">heading </h2>
+   </body>
 </body>
 </html>
