--- a/almi.html
+++ b/almi.html
@@ -1,6 +1,8 @@
 <html>
+    <head>
+        <link rel="stylesheet" href="./style.css">
     <body>
-        <h2>test2</h2>testHome
+        <li class="note">ID selection for us</li>
 
     </body>
 </html>
