--- a/index.html
+++ b/index.html
@@ -9,4 +9,5 @@
         <a href="./External.html">External</a>
         <a href="./internal.html">internal</a>
         <a href="./heading.html">Heading 2</a>
+        <a href="./almi.html">note</a>
 </html>
