--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
         <a href="./inline.html">inline</a>
         <a href="./External.html">External</a>
         <a href="./internal.html">internal</a>
-        <a href="./heading.html">Heading 2</a>
+        <a href="./heading.html">Heading 2</a><br>
         <a href="./almi.html">note</a>
 </html>
