--- a/almi.html
+++ b/almi.html
@@ -1,6 +1,7 @@
 <html>
     <head>
         <link rel="stylesheet" href="./style.css">
+    </head>
     <body>
         <li class="note">ID selection for us</li>
 
