--- a/index.html
+++ b/index.html
@@ -1,4 +1,16 @@
 <!DOCTYPE html>
+<head>
+    <meta charset="utf-8">
+    <title>Spanish Vocabularies </title>
+    <link rel="stylesheet" href="./style.css">
+
+</head>
+<body>
+
+<h1>color </h1>
+<h2>leasrn the color in spanish</h2>
+<h2 class="color-title" id="red">Rojo</h2>
+
         <a href="almi.html">Home page </a><br>
 
         <a href="newm.html">contact</a><br>
@@ -10,4 +22,7 @@
         <a href="./internal.html">internal</a>
         <a href="./heading.html">Heading 2</a><br>
         <a href="./almi.html">note</a>
+        <img src="./image.png" alt="greeen" id="red"/>
+        
+        </body>
 </html>
