--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <a href="./internal.html">internal</a>
         <a href="./heading.html">Heading 2</a><br>
         <a href="./almi.html">note</a>
-        <img src="./image.png" alt="greeen" id="red" height="426" width="500"/>
+        <img src="./pic/DSC00647.JPG" alt="greeen" id="red" height="426" width="500"/>
         
         </body>
 </html>
